se le agrega color de fondo, se mejora la visual de la card de las apps

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
-<app-header style="z-index: 3000;"></app-header>
-<div class="container-fluid con_router">
-    <router-outlet></router-outlet>
+<div class="bg-custom-lb">
+    <app-header style="z-index: 3000;"></app-header>
+    <div class="container-fluid con_router">
+        <router-outlet></router-outlet>
+    </div>
 </div>
