--- a/src/app/pages/home/app-creadas/app-creadas.component.html
+++ b/src/app/pages/home/app-creadas/app-creadas.component.html
@@ -1,18 +1,14 @@
 <div class="row">
     <div class="container-fluid">
-        <div class="col-12">
-            <h4 class="text-center">Creadas en la empresa Integ-Solutions</h4>
-            <hr>
-        </div>
         <div class="row">
             <div class="col-md-6 col-xl-4 mb-5 text-center">
-                <div class="shadow-sm rounded-lg">
+                <div class="shadow-sm rounded-lg card border-0">
                     <a (mouseleave)="tool.removeTool()" (click)="tool.removeTool()" (mouseenter)="tool.showTool(img_sical)" href="https://www.sicalingenieros.com/" target="_blank" rel="noopener noreferrer">
-                        <img #img_sical data-toggle="tooltip" data-placement="top" title="Ir a Sical" class="bd-placeholder-img w-75 my-3" src="assets/img/sical-logo.png" alt="Sical Ingenieros">
+                        <img #img_sical data-toggle="tooltip" data-placement="top" title="Ir a Sical" class="bd-placeholder-img w-75 my-3 bg-white" src="assets/img/sical-logo.png" alt="Sical Ingenieros">
                     </a>
                     <h2>SICAL INGENIEROS S.A.</h2>
                     <p class="justify-content">
-                        Creación de aplicación web para la gestión interna de la empresa Sical Ingenieros S.A.
+                        Creación de aplicación web para la gestión y administración interna de la empresa Sical Ingenieros S.A.
                     </p>
                     <ul class="list-group list-group-flush">
                         <li class="list-group-item p-1 font-weight-bolder">Funcionalidades de la App</li>
@@ -35,17 +31,20 @@
                         <li class="list-group-item p-1">
                             Manejo de paginación, rutas, listados, tablas, subida de archivos, etc...
                         </li>
+                        <div class="w-100 pt-3">
+                            <span class="badge badge-light float-right d-inline m-2">Creada en Integ-Solutions</span>
+                        </div>
                     </ul>
                 </div>
             </div>
             <div class="col-md-6 col-xl-4 mb-5 text-center">
-                <div class="shadow-sm rounded-lg">
+                <div class="shadow-sm rounded-lg card border-0">
                     <a (mouseleave)="tool.removeTool()" (click)="tool.removeTool()" (mouseenter)="tool.showTool(img_nh)" href="https://www.nhfoodschile.cl/" target="_blank" rel="noopener noreferrer">
-                        <img #img_nh data-toggle="tooltip" data-placement="top" title="Ir a NH FOODS" class="bd-placeholder-img w-75 my-3" src="assets/img/Logo_NHFoods.png" alt="nhfoodschile">
+                        <img #img_nh data-toggle="tooltip" data-placement="top" title="Ir a NH FOODS" class="bd-placeholder-img w-75 my-3 bg-white" src="assets/img/Logo_NHFoods.png" alt="nhfoodschile">
                     </a>
                     <h2>NH FOODS CHILE</h2>
                     <p class="justify-content">
-                        Creación de aplicación web para la gestión de los procesos internos de la empresa NH FOODS CHILE
+                        Creación de aplicación web para la gestión y administración de los procesos internos de la empresa NH FOODS CHILE
                     </p>
                     <ul class="list-group list-group-flush">
                         <li class="list-group-item p-1 font-weight-bolder">Funcionalidades de la App</li>
@@ -62,13 +61,16 @@
                         <li class="list-group-item p-1">
                             Manejo de paginación, rutas, listados, tablas, subida de archivos, etc...
                         </li>
+                        <div class="w-100 pt-3">
+                            <span class="badge badge-light float-right d-inline m-2">Creada en Integ-Solutions</span>
+                        </div>
                     </ul>
                 </div>
             </div>
             <div class="col-md-6 col-xl-4 mb-5 text-center">
-                <div class="shadow-sm rounded-lg">
+                <div class="shadow-sm rounded-lg card border-0">
                     <a (mouseleave)="tool.removeTool()" (click)="tool.removeTool()" (mouseenter)="tool.showTool(img_lena)" href="https://lenaycia.cl/" target="_blank" rel="noopener noreferrer">
-                        <img #img_lena data-toggle="tooltip" data-placement="top" title="Ir a Lena&Cia" class="bd-placeholder-img w-75 my-3" src="assets/img/logo-lena.png" alt="lenaycia">
+                        <img #img_lena data-toggle="tooltip" data-placement="top" title="Ir a Lena&Cia" class="bd-placeholder-img w-75 my-3 bg-white" src="assets/img/logo-lena.png" alt="lenaycia">
                     </a>
                     <h2>LENA&CIA ABOGADOS</h2>
                     <p class="justify-content">
@@ -100,6 +102,9 @@
                         <li class="list-group-item p-1">
                             Manejo de paginación, rutas, listados, tablas, subida de archivos, etc...
                         </li>
+                        <div class="w-100 pt-3">
+                            <span class="badge badge-light float-right d-inline m-2">Creada en Integ-Solutions</span>
+                        </div>
                     </ul>
                 </div>
             </div>
