--- a/src/app/pages/shared/header/header.component.html
+++ b/src/app/pages/shared/header/header.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar fixed-top pt-0 bg-transparent">
     <a class="navbar-brand text-white con_foto_carnet" id="home_micaraxd" routerLink="/home" data-trigger="manual" data-toggle="tooltip" data-placement="bottom" title="Volver al Home">
-        <img src="assets/img/yo-carnet.jpg" class="foto_carnet shadow rounded-circle" alt="">
+        <img src="assets/img/yo-carnet.jpg" class="foto_carnet shadow-sm rounded-circle border" alt="">
         <span class="text_foto text-white">
             Gustavo Gálvez
             <span class=" ml-2 font-weight-lighter">Developer</span>
