--- a/src/app/pages/shared/header/header.component.scss
+++ b/src/app/pages/shared/header/header.component.scss
@@ -57,7 +57,7 @@ $color-a: #fafba4;
 
 .divisor_footer {
     transition: all 200ms ease-in-out;
-    height: 5rem;
+    height: 90px;
     position: fixed;
     width: 100%;
     left: 0;
