--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,10 +1,14 @@
 .con_router {
-    margin-top: 120px;
+    margin-top: 60px;
+    padding-top: 60px;
+    min-height: 100vh;
+    height: auto;
 }
 
 @media (max-width: 540px) {
     .con_router {
-        margin-top: 20px;
+        padding-top: 20px;
+        margin-top: 0px;
         margin-bottom: 90px;
     }
 }
