--- a/src/app/pages/home/app-creadas/app-creadas.component.scss
+++ b/src/app/pages/home/app-creadas/app-creadas.component.scss
@@ -8,3 +8,16 @@ img {
         box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.2);
     }
 }
+
+.list-group-item {
+    background-color: inherit;
+}
+
+.card {
+    transition: all 600ms ease-in;
+    background-color: rgba(255, 255, 255, 0.4);
+    &:hover {
+        transition: all 200ms ease-in;
+        background-color: rgba(255, 255, 255, 1);
+    }
+}
