--- a/src/app/pages/home/estudios/estudios.component.html
+++ b/src/app/pages/home/estudios/estudios.component.html
@@ -1,5 +1,76 @@
-<div class="container">
-    <div class="row">
-        <i class="fas fa-hammer mr-3"></i> Sorry, Work in Progress...
+<div class="row">
+    <div class="container-fluid">
+        <div style="top: 50%;" class="row">
+            <div class="col-md-6">
+                <div class="card border-0 shadow-sm mb-3">
+                    <div class="container-fluid">
+                        <div class="row">
+                            <div class="col-2 p-0">
+                                <img class="bd-placeholder-img w-100 m-3" style="max-height: 200px" src="assets/img/unab-logo.png" alt="UNAB">
+                            </div>
+                            <div class="col-10">
+                                <small class="float-right">2015 - 2020</small>
+                                <div class="card-body p-2 pl-4">
+                                    <h4 class="card-title mb-2">Ingeniería civil en Informatica </h4>
+                                    <p class="card-text">Universidad Andres Bello </p>
+                                </div>
+                            </div>
+                            <div class="col-12 mb-2 text-center">
+                                <p class="collapse_custom shadow-sm badge btn-custom-lb mb-1 collapsed pointer" #col_p data-toggle="collapse" data-target="#proyectos" aria-expanded="false"> Ver Proyectos <i class="fas fa-angle-up"></i></p>
+                            </div>
+                            <div class="col-12">
+                                <div class="collapse" id="proyectos">
+                                    <ul class="list-group list-group-flush">
+                                        <li class="list-group-item">
+                                            “Georreferenciación de árboles” Encargado de la creación de la aplicación móvil para georreferenciar, clasificar y realizar CRUD completos, con imágenes, formas y texto hacía el middleware.
+                                            <small class="d-block">Duración: un año</small>
+                                        </li>
+                                        <li class="list-group-item">
+                                            “Modelo de Deep Learning” Modelo de Deep Learning capaz de predecir los números hechos en el aire frente a una cámara, con una precisión de 78% aproximadamente. Encargado de recolección, limpieza y clasificación de datos y el modelo de Deep Learning en
+                                            Keras.
+                                            <small class="d-block">Duración: medio año</small>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="card border-0 shadow-sm mb-3">
+                    <div class="container-fluid">
+                        <div class="row">
+                            <div class="col-2 p-0">
+                                <img class="bd-placeholder-img w-100 m-3" style="max-height: 200px" src="assets/img/logo-alicante-sol.png" alt="Alicante del Sol">
+                            </div>
+                            <div class="col-10">
+                                <small class="float-right">2011 - 2014</small>
+                                <div class="card-body p-2 pl-4">
+                                    <h4 class="card-title mb-1">Enseñanza Media </h4>
+                                    <p class="card-text">Colegio Alicante del Sol </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="card border-0 shadow-sm mb-3">
+                    <div class="container-fluid">
+                        <div class="row">
+                            <div class="col-2 p-0">
+                                <img class="bd-placeholder-img w-100 m-3" style="max-height: 200px" src="assets/img/logo-ES.png" alt="Estela Segura">
+                            </div>
+                            <div class="col-10">
+                                <small class="float-right">2002 - 2010</small>
+                                <div class="card-body p-2 pl-4">
+                                    <h4 class="card-title mb-1">Enseñanza Basica </h4>
+                                    <p class="card-text">Colegio Eyzaguirre y Estela Segura </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
