--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -3,7 +3,7 @@
         <div class="col-md-6">
             <div class="bg-custom-lb menu_button" routerLink="/aplicaciones" style="height: 80px;">
                 <img src="assets/img/angular.svg" class="icon-first">
-                <i class="fas fa-cat icon-second"></i> Aplicaciones
+                <i class="fas fa-cat icon-second"></i> Experiencia
             </div>
         </div>
         <div class="col-md-6">
