fix?. Se agregan la estructura de las tecnologias

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -12,5 +12,11 @@
                 <i class="fas fa-dog icon-second"></i> Estudios
             </div>
         </div>
+        <div class="col-md-6">
+            <div class="bg-custom-lb menu_button" routerLink="/tecnologias" style="height: 80px;">
+                <i class="fas fa-space-shuttle p-3 icon-first" style="color: rgb(200, 200, 60) !important;"></i>
+                <i class="fas fa-frog icon-second"></i> Tecnologías
+            </div>
+        </div>
     </div>
 </div>
