--- a/src/app/pages/shared/header/header.component.html
+++ b/src/app/pages/shared/header/header.component.html
@@ -3,7 +3,7 @@
         <img src="assets/img/yo-carnet.jpg" class="foto_carnet shadow-sm rounded-circle border" alt="">
         <span class="text_foto text-white">
             Gustavo Gálvez
-            <span class=" ml-2 font-weight-lighter">Developer</span>
+            <span class=" ml-2 font-weight-lighter hidden-sm-down">Developer</span>
         </span>
     </a>
     <ul class="navbar-nav mr-auto"></ul>
